--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,44 @@
 @import "tailwindcss";
 
+@layer base, components, utilities;
+
+@theme {
+  --breakpoint-sm: 968px;
+  --breakpoint-md: 1025px;
+  --breakpoint-lg: 1040px;
+  --breakpoint-xl: 1040px;
+  --breakpoint-2xl: 1040px;
+
+  /* Fontes */
+  --font-display: var(--font-satoshi), sans-serif;
+  --font-poppins: var(--font-poppins), sans-serif;
+
+  /* Cores */
+  --background:#FFFFFF;
+  --color-white: #FFFFFF;
+  --color-black: #000000;
+  --color-primary: #8B8DF0;
+  --color-primary-opacity: rgba(139, 141, 240, 0.20);
+  --color-gray: #6B6B6B;
+  --color-gray-50: #9A9A9A;
+  --color-gray-40: #BDBDBD;
+  --color-gray-30: #D2D2D2;
+  --color-line: #BEBEBE;
+  --color-offwhite: #F5F5F5;
+
+  --shadow-circle: 0px 90px 200px 0px #BDBEFD;
+  --shadow-banner: 2px 2px 20px 0px rgba(30, 30, 30, 0.06);
+
+  /* Nova Futura Investimentos App */
+  --font-montserrat: var(--font-montserrat), sans-serif;
+  --color-nf-blue-night: rgba(41, 57, 83);
+  --color-nf-blue-jeans: rgba(28, 108, 157);  
+  --color-nf-blue-electric: rgba(37, 167, 219);
+  --color-nf-blue-cloud: rgba(170, 203, 222);
+  --color-nf-error: rgba(253, 100, 95);
+  --color-nf-success: rgba(23, 182, 82);
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -24,47 +63,17 @@ a:hover {
   color: #535bf2;
 }
 
+@utility hide-scrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  font-family: var(--font-display);
+  background-color: var(--background);
+  color: var(--color-gray);
 }
