--- a/src/index.css
+++ b/src/index.css
@@ -9,49 +9,57 @@
   --breakpoint-xl: 1040px;
   --breakpoint-2xl: 1040px;
 
-  /* Fontes */
-  --font-display: var(--font-satoshi), sans-serif;
-  --font-poppins: var(--font-poppins), sans-serif;
-
   /* Cores */
   --background:#FFFFFF;
   --color-white: #FFFFFF;
   --color-black: #000000;
-  --color-primary: #8B8DF0;
-  --color-primary-opacity: rgba(139, 141, 240, 0.20);
-  --color-gray: #6B6B6B;
-  --color-gray-50: #9A9A9A;
-  --color-gray-40: #BDBDBD;
-  --color-gray-30: #D2D2D2;
-  --color-line: #BEBEBE;
-  --color-offwhite: #F5F5F5;
 
-  --shadow-circle: 0px 90px 200px 0px #BDBEFD;
-  --shadow-banner: 2px 2px 20px 0px rgba(30, 30, 30, 0.06);
+  --color-primary-100: rgba(51, 204, 153, 1);
+  --color-primary-75: rgba(51, 204, 153, 0.75);
+  --color-primary-40: rgba(51, 204, 153, 0.4);
+  --color-primary-15: rgba(51, 204, 153, 0.15);
+  --color-primary-10: rgba(51, 204, 153, 0.1);
 
-  /* Nova Futura Investimentos App */
-  --font-montserrat: var(--font-montserrat), sans-serif;
-  --color-nf-blue-night: rgba(41, 57, 83);
-  --color-nf-blue-jeans: rgba(28, 108, 157);  
-  --color-nf-blue-electric: rgba(37, 167, 219);
-  --color-nf-blue-cloud: rgba(170, 203, 222);
-  --color-nf-error: rgba(253, 100, 95);
-  --color-nf-success: rgba(23, 182, 82);
-}
+  --color-secondary-100: rgba(255, 139, 61, 1);
+  --color-secondary-75: rgba(255, 139, 61, 0.75);
+  --color-secondary-40: rgba(255, 139, 61, 0.4);
+  --color-secondary-15: rgba(255, 139, 61, 0.15);
 
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  --color-tertiary-100: rgba(5, 37, 59, 1);
+  --color-tertiary-75: rgba(5, 37, 59, 0.75);
+  --color-tertiary-40: rgba(5, 37, 59, 0.4);
+  --color-tertiary-15: rgba(5, 37, 59, 0.15);
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --color-asset-100: rgba(153, 255, 0, 1);
+  --color-asset-75: rgba(153, 255, 0, 0.75);
+  --color-asset-40: rgba(153, 255, 0, 0.4);
+  --color-asset-15: rgba(153, 255, 0, 0.15);
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --color-neutral-100: #080B12;
+  --color-neutral-90: #1A1A1A;
+  --color-neutral-80: #374151;
+  --color-neutral-70: #4B5563;
+  --color-neutral-60: #6B7280;
+  --color-neutral-50: #9CA3AF;
+  --color-neutral-40: #D1D5DB;
+  --color-neutral-35: #E2E4E9;
+  --color-neutral-30: #F3F4F6;
+  --color-neutral-20: #F5F5F5;
+  --color-neutral-10: #F9FAFB;
+  --color-neutral-0: #FEFEFE;
+
+  --color-info-60: #2A89EF;
+  --color-info-60: #EFF9FF;
+
+
+  --color-success-60: #34BE15;
+  --color-success-20: #D9F2D0;
+
+  --color-warning-60: #F9C310;
+  --color-warning-20: #FEEECF;
+
+  --color-error-60: #E61E32;
+  --color-error-20: #FFE4E7;
 }
 
 a {
@@ -73,7 +81,7 @@ a:hover {
 }
 
 body {
-  font-family: var(--font-display);
+  font-family: "Open Sans", sans-serif;
   background-color: var(--background);
-  color: var(--color-gray);
+  color: var(--color-neutral-60);
 }
